# smart-saag-soy-monitor

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __dir_tree.csv  __py_recent.txt  __streamlit_files.txt  __tree.txt  app_logo_test.py  logo_header.py  pyproject.toml  requirements.txt  requirements_full.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-ci.yml
.streamlit/: config.toml
app/: Home-01.py  Home-02.py  Home-03.py  Home-04.py  Home-05.py  Home-06.py  Home.py
app/pages/: 01_Áreas_e_Períodos.py  02_Séries_Temporais.py  03_Exportacoes.py  03_Exportações.py  04_Ajuda.py
app/pages/Scripts_antigos/: 02_Séries_Temporais-10.py  02_Séries_Temporais-11.py  02_Séries_Temporais.py
assets/: styles.css
docs/: ONE-PAGER_FAPERON.md
examples/: config.example.json
outputs/: aoi.gpkg  ts_ndvi.csv  ts_ndvi.parquet
src/saag_soy_monitor/: pipeline.py  senhub.py
src/saag_soy_monitor/examples/: fetch_and_ndvi.py
